# servicenow-doc-template

./: .coveragerc  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  start_web.py
config/: templates.yaml
docs/: DELIVERY_DOCUMENTS.md
docs/samples/: sample_cmdb_design.md
src/: cli.py
src/config/: settings.py
src/core/: base_template.py
src/exporters/: __init__.py  document_exporter.py
src/generators/: document_generator.py
src/models/: document.py
src/templates/: change_management.j2  change_management.py  cmdb_design.j2  cmdb_design.py  data_migration.j2  data_migration.py  environment_release.j2  environment_release.py  incident_management.j2  incident_management.py  knowledge_management.j2  knowledge_management.py  operation_design.j2  operation_design.py  problem_management.j2  problem_management.py  security_design.j2  security_design.py  service_catalog.j2  service_catalog.py  slm_design.j2  slm_design.py  test_design.j2  test_design.py
src/validators/: __init__.py  base_validator.py  document_validator.py  validation_manager.py
src/web/: __init__.py  main.py
src/web/static/css/: main.css
src/web/static/js/: main.js
src/web/templates/: base.html  error.html  index.html  preview.html  settings.html  success.html  template_detail.html
tests/: conftest.py  test_config.py  test_exporters.py  test_generators.py  test_templates.py  test_validators.py  test_web.py
